fix: center align plantuml elements

--- a/src/Thin-Style.less
+++ b/src/Thin-Style.less
@@ -959,6 +959,7 @@ body[for="html-export"] {
     }
 
     .plantuml {
+        text-align: center;
         overflow-x: auto;
         overflow-y: hidden !important;
     }
